--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cypress": "^12.7.0"
   },
   "devDependencies": {
-    "cypress-plugin-tab": "^1.0.5"
+    "cypress-plugin-tab": "^1.0.5",
+    "cypress-xpath": "^2.0.1"
   }
 }
